<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="11" android:layout_gravity="11" android:orientation="1" android:id="@id/dialog_consumer" android:background="#88000000" android:padding="30dp" android:layout_width="-1" android:layout_height="-1"
    <LinearLayout android:gravity="11" android:layout_gravity="11" android:orientation="1" android:background="@drawable/round_white" android:padding="10dp" android:layout_width="-2" android:layout_height="-2">
        <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textColor="#000000" android:gravity="11" android:id="@id/about_version" android:layout_width="-2" android:layout_height="-2" android:text="@string/app_name" android:lines="1" android:shadowColor="#ff0000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="3.0" />
        <TextView android:textColor="#222222" android:gravity="11" android:id="@id/about_by" android:layout_width="-1" android:layout_height="-2" android:text="@string/about_by" android:lines="1" />
        <FrameLayout android:layout_width="-2" android:layout_height="-2">
            <ImageView android:id="@id/about_gear" android:layout_width="-2" android:layout_height="-2" android:src="@drawable/about_gear" android:contentDescription="@string/image" />
            <ImageView android:layout_width="-2" android:layout_height="-2" android:src="@drawable/about_terminal" android:contentDescription="@string/image" />
        </FrameLayout>
        <TextView android:textColor="#000000" android:id="@id/about_info" android:padding="5dp" android:layout_width="-2" android:layout_height="-2" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textColor="#000000" android:gravity="11" android:id="@id/about_close" android:background="@drawable/round_gray" android:layout_width="-1" android:layout_height="-2" android:minHeight="40dp" android:text="@string/answer_ok" android:lines="1" />
    </LinearLayout>
</LinearLayout>
